--- a/index.html
+++ b/index.html
@@ -162,6 +162,11 @@
     <a href="#contact">Contact</a>
   </nav>
 
+  <section id="Premium Maths Coaching for Class 11&12" class="box">
+    <h2>Premium Maths Coaching for Class 11&12</h2>
+    <son>Strong concepts • Daily practice • Weekly tests • Personalized doubt solving. <strong>अब Maths होगा आसान !</strong></son>
+  </section>
+
   <section id="about" class="box">
     <h2>About Us</h2>
     <p>Welcome to <b>The University Of Mathematics</b>, taught by <b>Vikram Sir (Mentor of Jharkhand 3rd topper)</b>. We specialize in building strong mathematical foundations for Class 11 & Class 12.</p>
