--- a/index.html
+++ b/index.html
@@ -160,9 +160,10 @@
     <a href="#gallery">Gallery</a>
     <a href="#results">Results</a>
     <a href="#contact">Contact</a>
+    
   </nav>
 
-  <section id="Premium Maths Coaching for Class 11&12" class="box">
+  <section id="info" class="box">
     <h2>Premium Maths Coaching for Class 11&12</h2>
     <son>Strong concepts • Daily practice • Weekly tests • Personalized doubt solving. <strong>अब Maths होगा आसान !</strong></son>
   </section>
@@ -183,7 +184,7 @@
   </section>
 
   <section id="achievements" class="box">
-    <h2>Our Achievements</h2>
+    <h2 style="color: rgb(49, 0, 139);">Our Achievements</h2>
     <p>We are proud of our students' consistent success in board exams .</p><ul>
     <li style="color: crimson;">State 3rd Topper (2025) Jagganath Singh .</li>
     </ul>
@@ -193,10 +194,11 @@
     <ul>
         <li>VKM College 6th Topper (2025) Siyaram Mahatha .</li></ul>
     <ul>
-        <li> RM Inter College Topper (2025) Mithelesh Mahatha .</li></ul>
+        <li> VKM College 7th Topper (2025) Bhola Singh .</li></ul>
+    <ul>
+       <li> RM Inter College Topper (2025) Mithelesh Mahatha .</li></ul>
     <ul>
       <li>many students scored 95%+ in Class 12 Boards.</li>
-    
     </ul>
   </section>
 
@@ -215,6 +217,7 @@
     <p>Check student performance and download result sheets online.</p>
     <a class="btn" href="resulto.html">View Results</a>
   </section>
+
 
   <section id="contact" class="box">
     <h2>Contact Us</h2>
