--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
     
   </nav>
 
+   <marquee behavior="scroll" scrolldelay="100" direction="left" bgcolor="#f0f0f0">Welcome to <b style="color: blue;">The University of Mathematics</b> <b style="color: brown;">Admission open for Class 11 (2025-27)</b></marquee>
+
   <section id="info" class="box">
     <h2>Premium Maths Coaching for Class 11&12</h2>
     <son>Strong concepts • Daily practice • Weekly tests • Personalized doubt solving. <strong>अब Maths होगा आसान !</strong></son>
