--- a/resulto.html
+++ b/resulto.html
@@ -147,7 +147,330 @@
   </div>
 
   <script>
-    const students = [
+    const students = [{
+    "roll_no": 102,
+    "roll_code": 7080,
+    "name": "PREM KUMAR SHARMA",
+    "father": "ANIL KUMAR SHARMA",
+    "mother": "ELACHU DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 33,
+    "percentage": "83%",
+    "rank": 1,
+    "remarks": "good",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 111,
+    "roll_code": 4410,
+    "name": "SADHAN MAHATHA",
+    "father": "MURLI DHAR MAHATHA",
+    "mother": "RITA DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 30,
+    "percentage": "75%",
+    "rank": 2,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 103,
+    "roll_code": 137,
+    "name": "AKASH MAHATHA",
+    "father": "ARJUN MAHATHA",
+    "mother": "",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 26,
+    "percentage": "65%",
+    "rank": 8,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 112,
+    "roll_code": 1173,
+    "name": "MADHUSUDAN CHOUDHARY",
+    "father": "MOHAN LAL CHOUDHARY",
+    "mother": "SAMPURA DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 18,
+    "percentage": "45%",
+    "rank": 20,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 104,
+    "roll_code": 9711,
+    "name": "KARAN KUMAR GORAIN",
+    "father": "RAJU GORAIN",
+    "mother": "TULA DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 27,
+    "percentage": "68%",
+    "rank": 6,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 124,
+    "roll_code": 4259,
+    "name": "DURGA CHARAN GORAIN",
+    "father": "KISHAN KUMAR GORAIN",
+    "mother": "KIRAN DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 21,
+    "percentage": "53%",
+    "rank": 15,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 115,
+    "roll_code": 5900,
+    "name": "SWITI MAHATHA",
+    "father": "SAMAR NATH MAHATHA",
+    "mother": "JABA DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 27,
+    "percentage": "68%",
+    "rank": 6,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 105,
+    "roll_code": 7201,
+    "name": "PUJA KUMARI",
+    "father": "KISHAN MAHATO",
+    "mother": "ANITA DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 25,
+    "percentage": "63%",
+    "rank": 9,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 117,
+    "roll_code": 15,
+    "name": "CHANDAN SAHU",
+    "father": "BHOLA SAHU",
+    "mother": "KAVITA DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 19,
+    "percentage": "48%",
+    "rank": 17,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 126,
+    "roll_code": 8152,
+    "name": "ANIKET SINGH",
+    "father": "BASHUDEV SINGH",
+    "mother": "SITA DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 18,
+    "percentage": "45%",
+    "rank": 20,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 118,
+    "roll_code": 718,
+    "name": "LAXMAN KUMAR",
+    "father": "SAHADEV RAY",
+    "mother": "SAVITRI DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 25,
+    "percentage": "63%",
+    "rank": 9,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 133,
+    "roll_code": 1683,
+    "name": "PRAMOD KUMAR",
+    "father": "DEVILAL MAHATO",
+    "mother": "SULOCHANA DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 22,
+    "percentage": "55%",
+    "rank": 14,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 127,
+    "roll_code": 7376,
+    "name": "AMAR GOPE",
+    "father": "",
+    "mother": "",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 16,
+    "percentage": "40%",
+    "rank": 22,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 107,
+    "roll_code": 7083,
+    "name": "JAGJEET MAHATHA",
+    "father": "JAIDEO MAHATHA",
+    "mother": "NAMITA DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 23,
+    "percentage": "58%",
+    "rank": 12,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 119,
+    "roll_code": 9686,
+    "name": "ROHIT GORAIN",
+    "father": "VISHWANATH GORAI",
+    "mother": "SUNEETA DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 19,
+    "percentage": "48%",
+    "rank": 17,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 128,
+    "roll_code": 717,
+    "name": "PREM KUMAR MAHATO",
+    "father": "SKAKTIPAD MAHATO",
+    "mother": "SURATHI DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 24,
+    "percentage": "60%",
+    "rank": 11,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 120,
+    "roll_code": 2596,
+    "name": "VIJAY KANT GOPE",
+    "father": "KAMAL GOPE",
+    "mother": "PAWNI DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 19,
+    "percentage": "48%",
+    "rank": 17,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 108,
+    "roll_code": 5741,
+    "name": "SHIV KUMAR",
+    "father": "SANJAY KUMAR BARNWAL",
+    "mother": "SANGITA DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 20,
+    "percentage": "50%",
+    "rank": 16,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 121,
+    "roll_code": 7927,
+    "name": "ABHISHEK KUMAR",
+    "father": "KIREN GOPE",
+    "mother": "GEETA DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 23,
+    "percentage": "58%",
+    "rank": 12,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 129,
+    "roll_code": 541,
+    "name": "VISHAL KUMAR",
+    "father": "DIKSHIT KUMAR MAHATO",
+    "mother": "LAKSHMI DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 29,
+    "percentage": "73%",
+    "rank": 4,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 122,
+    "roll_code": 539,
+    "name": "ANUJ KUMAR",
+    "father": "TAPAN PATHAK",
+    "mother": "RITA PATHAK",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 14,
+    "percentage": "35%",
+    "rank": 23,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 130,
+    "roll_code": 1295,
+    "name": "ANKIT ROY",
+    "father": "ASHISH KUMAR ROY",
+    "mother": "NAMITA DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 30,
+    "percentage": "75%",
+    "rank": 2,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  },{
+    "roll_no": 110,
+    "roll_code": 3013,
+    "name": "VIVEK KUMAR MAHATO",
+    "father": "PARIKSHIT MAHATO",
+    "mother": "RITA DEVI",
+    "test_name": "Class 12 14th Test Algebra",
+    "total_marks": 40,
+    "marks_obtained": 29,
+    "percentage": "73%",
+    "rank": 4,
+    "remarks": "try harder",
+    "date": "23-11-2025",
+    "place": "Bokaro"
+  }
+,
   {
     "roll_no": 229,
     "roll_code": 185,
