--- a/resulto.html
+++ b/resulto.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Class XI Result Lookup</title>
+  <title>Class XI Result</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -417,7 +417,142 @@
     "remarks": "try harder",
     "date": "30-11-2025",
     "place": "Bokaro"
+  },{
+    "roll_no": 229,
+    "roll_code": 185,
+    "name": "ALOK MAHATO",
+    "father": "PASHUPATI MAHATO",
+    "mother": "POLANI DEVI",
+    "test_name": "Class 11 12th Test (Complex Number)",
+    "total_marks": 40,
+    "marks_obtained": 32,
+    "percentage": "80%",
+    "rank": 1,
+    "remarks": "good",
+    "date": "30-11-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 227,
+    "roll_code": 4309,
+    "name": "VIVEK KUMAR",
+    "father": "ASHOK KUMAR MAHTO",
+    "mother": "ANJU DEVI",
+    "test_name": "Class 11 12th Test (Complex Number)",
+    "total_marks": 40,
+    "marks_obtained": 7,
+    "percentage": "18%",
+    "rank": 9,
+    "remarks": "try harder",
+    "date": "30-11-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 230,
+    "roll_code": 4368,
+    "name": "SHIVSHANKAR KUMAR",
+    "father": "MANOJ KUMAR MAHATO",
+    "mother": "SHAKUNTALA DEVI",
+    "test_name": "Class 11 12th Test (Complex Number)",
+    "total_marks": 40,
+    "marks_obtained": 20,
+    "percentage": "50%",
+    "rank": 4,
+    "remarks": "try harder",
+    "date": "30-11-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 233,
+    "roll_code": 3834,
+    "name": "PRINCE KUMAR",
+    "father": "RAJESH YADAV",
+    "mother": "RINKU DEVI",
+    "test_name": "Class 11 12th Test (Complex Number)",
+    "total_marks": 40,
+    "marks_obtained": 29,
+    "percentage": "73%",
+    "rank": 2,
+    "remarks": "try harder",
+    "date": "30-11-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 237,
+    "roll_code": 7103,
+    "name": "USHA KUMARI JHA",
+    "father": "VISHWAJIT OJHA",
+    "mother": "SUNITA DEVI",
+    "test_name": "Class 11 12th Test (Complex Number)",
+    "total_marks": 40,
+    "marks_obtained": 20,
+    "percentage": "50%",
+    "rank": 4,
+    "remarks": "try harder",
+    "date": "30-11-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 339,
+    "roll_code": 4234,
+    "name": "RINKI KUMARI",
+    "father": "SHANKAR KUMAR MAHATO",
+    "mother": "ANITA DEVI",
+    "test_name": "Class 11 12th Test (Complex Number)",
+    "total_marks": 40,
+    "marks_obtained": 15,
+    "percentage": "38%",
+    "rank": 6,
+    "remarks": "try harder",
+    "date": "30-11-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 341,
+    "roll_code": 418,
+    "name": "MANISH KUMAR",
+    "father": "RAJESH MAHATO",
+    "mother": "SITA DEVI",
+    "test_name": "Class 11 12th Test (Complex Number)",
+    "total_marks": 40,
+    "marks_obtained": 24,
+    "percentage": "60%",
+    "rank": 3,
+    "remarks": "try harder",
+    "date": "30-11-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 342,
+    "roll_code": 3041,
+    "name": "SUMIT KUMAR",
+    "father": "INDU SHEKHAR SHARMA",
+    "mother": "MANJU DEVI",
+    "test_name": "Class 11 12th Test (Complex Number)",
+    "total_marks": 40,
+    "marks_obtained": 10,
+    "percentage": "25%",
+    "rank": 8,
+    "remarks": "try harder",
+    "date": "30-11-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 345,
+    "roll_code": 6716,
+    "name": "VIVEK SHARMA",
+    "father": "MAHAVIR SHARMA",
+    "mother": "SARITA DEVI",
+    "test_name": "Class 11 12th Test (Complex Number)",
+    "total_marks": 40,
+    "marks_obtained": 15,
+    "percentage": "38%",
+    "rank": 6,
+    "remarks": "try harder",
+    "date": "30-11-2025",
+    "place": "Bokaro"
   }
+
   ];
 
     function searchResult() {
