--- a/resulto.html
+++ b/resulto.html
@@ -149,6 +149,351 @@
   <script>
     const students = [
   {
+    "roll_no": 102,
+    "roll_code": 7080,
+    "name": "PREM KUMAR SHARMA",
+    "father": "ANIL KUMAR SHARMA",
+    "mother": "ELACHU DEVI",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 33,
+    "percentage": "83%",
+    "rank": 1,
+    "remarks": "good",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 111,
+    "roll_code": 4410,
+    "name": "SADHAN MAHATHA",
+    "father": "MURLI DHAR MAHATHA",
+    "mother": "RITA DEVI",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 5,
+    "percentage": "13%",
+    "rank": 22,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 103,
+    "roll_code": 137,
+    "name": "AKASH MAHATHA",
+    "father": "ARJUN MAHATHA",
+    "mother": "",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 27,
+    "percentage": "68%",
+    "rank": 4,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 112,
+    "roll_code": 1173,
+    "name": "MADHUSUDAN CHOUDHARY",
+    "father": "MOHAN LAL CHOUDHARY",
+    "mother": "SAMPURA DEVI",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 23,
+    "percentage": "58%",
+    "rank": 9,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 101,
+    "roll_code": 2989,
+    "name": "DHIRAJ KUMAR MAHATHA",
+    "father": "BISHNU MAHATHA",
+    "mother": "GAYATRI DEVI",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 19,
+    "percentage": "48%",
+    "rank": 10,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 104,
+    "roll_code": 9711,
+    "name": "KARAN KUMAR GORAIN",
+    "father": "RAJU GORAIN",
+    "mother": "TULA DEVI",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 26,
+    "percentage": "65%",
+    "rank": 5,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 114,
+    "roll_code": 4903,
+    "name": "AMIT CHOUDHARY",
+    "father": "",
+    "mother": "",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 12,
+    "percentage": "30%",
+    "rank": 17,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 124,
+    "roll_code": 4259,
+    "name": "DURGA CHARAN GORAIN",
+    "father": "KISHAN KUMAR GORAIN",
+    "mother": "KIRAN DEVI",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 11,
+    "percentage": "28%",
+    "rank": 19,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 115,
+    "roll_code": 5900,
+    "name": "SWITI MAHATHA",
+    "father": "SAMAR NATH MAHATHA",
+    "mother": "JABA DEVI",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 16,
+    "percentage": "40%",
+    "rank": 11,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 105,
+    "roll_code": 7201,
+    "name": "PUJA KUMARI",
+    "father": "KISHAN MAHATO",
+    "mother": "ANITA DEVI",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 15,
+    "percentage": "38%",
+    "rank": 14,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 117,
+    "roll_code": 15,
+    "name": "CHANDAN SAHU",
+    "father": "BHOLA SAHU",
+    "mother": "KAVITA DEVI",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 25,
+    "percentage": "63%",
+    "rank": 6,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 118,
+    "roll_code": 718,
+    "name": "LAXMAN KUMAR",
+    "father": "SAHADEV RAY",
+    "mother": "SAVITRI DEVI",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 11,
+    "percentage": "28%",
+    "rank": 19,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 133,
+    "roll_code": 1683,
+    "name": "PRAMOD KUMAR",
+    "father": "DEVILAL MAHATO",
+    "mother": "SULOCHANA DEVI",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 16,
+    "percentage": "40%",
+    "rank": 11,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 107,
+    "roll_code": 7083,
+    "name": "JAGJEET MAHATHA",
+    "father": "JAIDEO MAHATHA",
+    "mother": "NAMITA DEVI",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 16,
+    "percentage": "40%",
+    "rank": 11,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 128,
+    "roll_code": 717,
+    "name": "PREM KUMAR MAHATO",
+    "father": "SHUKTIPAD MAHATO",
+    "mother": "SURATHI DEVI",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 25,
+    "percentage": "63%",
+    "rank": 6,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 108,
+    "roll_code": 5741,
+    "name": "SHIV KUMAR",
+    "father": "SANJAY KUMAR BARNWAL",
+    "mother": "SANGITA DEVI",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 12,
+    "percentage": "30%",
+    "rank": 17,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 121,
+    "roll_code": 7927,
+    "name": "ABHISHEK KUMAR",
+    "father": "KIREN GOPE",
+    "mother": "GEETA DEVI",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 31,
+    "percentage": "78%",
+    "rank": 3,
+    "remarks": "good",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 122,
+    "roll_code": 539,
+    "name": "ANUJ KUMAR",
+    "father": "TAPAN PATHAK",
+    "mother": "RITA PATHAK",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 11,
+    "percentage": "28%",
+    "rank": 19,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 130,
+    "roll_code": 1295,
+    "name": "ANKIT ROY",
+    "father": "ASHISH KUMAR ROY",
+    "mother": "NAMITA DEVI",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 32,
+    "percentage": "80%",
+    "rank": 2,
+    "remarks": "good",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 123,
+    "roll_code": 4514,
+    "name": "KAUSHAL KUMAR SHARMA",
+    "father": "BHOLA NATH SHARMA",
+    "mother": "SIMA DEVI",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 15,
+    "percentage": "38%",
+    "rank": 14,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 136,
+    "roll_code": 90,
+    "name": "BABITA KUMARI",
+    "father": "",
+    "mother": "",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 1,
+    "percentage": "3%",
+    "rank": 23,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 137,
+    "roll_code": 5557,
+    "name": "RAKESH KUMAR SHARMA",
+    "father": "",
+    "mother": "MILU DEVI",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 14,
+    "percentage": "35%",
+    "rank": 16,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 138,
+    "roll_code": 4947,
+    "name": "KRISHNA JHA",
+    "father": "",
+    "mother": "",
+    "test_name": "Class 12 15th Test (Vector & 3D)",
+    "total_marks": 40,
+    "marks_obtained": 25,
+    "percentage": "63%",
+    "rank": 6,
+    "remarks": "try harder",
+    "date": "07-12-2025",
+    "place": "Bokaro"
+  },
+  {
     "roll_no": 228,
     "roll_code": 7521,
     "name": "AKHILESH KUMAR CHOUDHARY",
