--- a/resulto.html
+++ b/resulto.html
@@ -149,202 +149,335 @@
   <script>
     const students = [
   {
-    "roll_no": 201,
-    "roll_code": 1319,
-    "name": "AMAN KUMAR SHARMA",
-    "father": "VIKASH CHANDRA SHARMA",
-    "mother": "LAKSHMI DEVI",
-    "test_name": "Class 11 14th Test (STATISTICS AND PROBABILITY)",
+    "roll_no": 102,
+    "roll_code": 7080,
+    "name": "PREM KUMAR SHARMA",
+    "father": "ANIL KUMAR SHARMA",
+    "mother": "ELACHU DEVI",
+    "test_name": "Class 12 17th Test Differential Calculus",
     "total_marks": 40,
-    "marks_obtained": 20,
-    "percentage": "50%",
-    "rank": 11,
-    "remarks": "try harder",
-    "date": "14-12-2025",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 216,
-    "roll_code": 207,
-    "name": "BUNTY SHARMA",
-    "father": "THAKUL DAS SHARMA",
-    "mother": "PUSHPA DEVI",
-    "test_name": "Class 11 14th Test (STATISTICS AND PROBABILITY)",
-    "total_marks": 40,
-    "marks_obtained": 30,
-    "percentage": "75%",
-    "rank": 4,
-    "remarks": "try harder",
-    "date": "14-12-2025",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 215,
-    "roll_code": 3958,
-    "name": "DOLI KUMARI",
-    "father": "SHYAM SUNDAR MAHATO",
-    "mother": "NEERA DEVI",
-    "test_name": "Class 11 14th Test (STATISTICS AND PROBABILITY)",
-    "total_marks": 40,
-    "marks_obtained": 24,
-    "percentage": "60%",
-    "rank": 8,
-    "remarks": "try harder",
-    "date": "14-12-2025",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 219,
-    "roll_code": 9737,
-    "name": "GOPAL SINGH",
-    "father": "SHUKDEO SINGH CHOUDHARY",
-    "mother": "REETA DEVI",
-    "test_name": "Class 11 14th Test (STATISTICS AND PROBABILITY)",
-    "total_marks": 40,
-    "marks_obtained": 27,
-    "percentage": "68%",
-    "rank": 6,
-    "remarks": "try harder",
-    "date": "14-12-2025",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 204,
-    "roll_code": 3217,
-    "name": "KALYANI KUMARI",
-    "father": "RAJENDRA SINGH CHOUDHARY",
-    "mother": "BALIKA DEVI",
-    "test_name": "Class 11 14th Test (STATISTICS AND PROBABILITY)",
-    "total_marks": 40,
-    "marks_obtained": 30,
-    "percentage": "75%",
-    "rank": 4,
-    "remarks": "try harder",
-    "date": "14-12-2025",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 214,
-    "roll_code": 9561,
-    "name": "KAREENA SHARMA",
-    "father": "RAJESH SHARMA",
-    "mother": "REENA DEVI",
-    "test_name": "Class 11 14th Test (STATISTICS AND PROBABILITY)",
-    "total_marks": 40,
-    "marks_obtained": 18,
-    "percentage": "45%",
-    "rank": 12,
-    "remarks": "try harder",
-    "date": "14-12-2025",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 206,
-    "roll_code": 9177,
-    "name": "NISHA KUMARI",
-    "father": "CHHUTU LAL GORAIN",
-    "mother": "CHANDANA DEVI",
-    "test_name": "Class 11 14th Test (STATISTICS AND PROBABILITY)",
-    "total_marks": 40,
-    "marks_obtained": 22,
-    "percentage": "55%",
-    "rank": 10,
-    "remarks": "try harder",
-    "date": "14-12-2025",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 207,
-    "roll_code": 743,
-    "name": "PRINCE KUMAR",
-    "father": "MANOJ KUMAR",
-    "mother": "LALITA DEVI",
-    "test_name": "Class 11 14th Test (STATISTICS AND PROBABILITY)",
-    "total_marks": 40,
-    "marks_obtained": 32,
-    "percentage": "80%",
-    "rank": 3,
-    "remarks": "try harder",
-    "date": "14-12-2025",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 226,
-    "roll_code": 6138,
-    "name": "RAJIV SINGH",
-    "father": "PRAKASH SINGH",
-    "mother": "MEENA DEVI",
-    "test_name": "Class 11 14th Test (STATISTICS AND PROBABILITY)",
-    "total_marks": 40,
-    "marks_obtained": 40,
-    "percentage": "100%",
+    "marks_obtained": 33,
+    "percentage": "83%",
     "rank": 1,
     "remarks": "good",
     "date": "14-12-2025",
     "place": "Bokaro"
   },
   {
-    "roll_no": 210,
-    "roll_code": 5938,
-    "name": "ROHIT GORAIN",
-    "father": "JITENDRA GORAIN",
-    "mother": "SARASWATI GORAIN",
-    "test_name": "Class 11 14th Test (STATISTICS AND PROBABILITY)",
+    "roll_no": 111,
+    "roll_code": 4410,
+    "name": "SADHAN MAHATHA",
+    "father": "MURLI DHAR MAHATHA",
+    "mother": "RITA DEVI",
+    "test_name": "Class 12 17th Test Differential Calculus",
     "total_marks": 40,
-    "marks_obtained": 12,
-    "percentage": "30%",
-    "rank": 13,
+    "marks_obtained": 9,
+    "percentage": "23%",
+    "rank": 18,
     "remarks": "try harder",
     "date": "14-12-2025",
     "place": "Bokaro"
   },
   {
-    "roll_no": 227,
-    "roll_code": 4309,
-    "name": "VIVEK KUMAR",
-    "father": "ASHOK KUMAR MAHTO",
-    "mother": "ANJU DEVI",
-    "test_name": "Class 11 14th Test (STATISTICS AND PROBABILITY)",
+    "roll_no": 103,
+    "roll_code": 137,
+    "name": "AKASH MAHATHA",
+    "father": "ARJUN MAHATHA",
+    "mother": "",
+    "test_name": "Class 12 17th Test Differential Calculus",
     "total_marks": 40,
-    "marks_obtained": 25,
-    "percentage": "63%",
-    "rank": 7,
+    "marks_obtained": 19,
+    "percentage": "48%",
+    "rank": 10,
     "remarks": "try harder",
     "date": "14-12-2025",
     "place": "Bokaro"
   },
   {
-    "roll_no": 338,
-    "roll_code": 7283,
-    "name": "GAURI KUMARI",
-    "father": "LAL MOHAN MAHATO",
-    "mother": "ANITA DEVI",
-    "test_name": "Class 11 14th Test (STATISTICS AND PROBABILITY)",
+    "roll_no": 112,
+    "roll_code": 1173,
+    "name": "MADHUSUDAN CHOUDHARY",
+    "father": "MOHAN LAL CHOUDHARY",
+    "mother": "SAMPURA DEVI",
+    "test_name": "Class 12 17th Test Differential Calculus",
     "total_marks": 40,
-    "marks_obtained": 36,
-    "percentage": "90%",
+    "marks_obtained": 16,
+    "percentage": "40%",
+    "rank": 12,
+    "remarks": "try harder",
+    "date": "14-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 101,
+    "roll_code": 2989,
+    "name": "DHIRAJ KUMAR MAHATHA",
+    "father": "BISHNU MAHATHA",
+    "mother": "GAYATRI DEVI",
+    "test_name": "Class 12 17th Test Differential Calculus",
+    "total_marks": 40,
+    "marks_obtained": 31,
+    "percentage": "78%",
     "rank": 2,
     "remarks": "good",
     "date": "14-12-2025",
     "place": "Bokaro"
   },
   {
-    "roll_no": 339,
-    "roll_code": 4234,
-    "name": "RINKI KUMARI",
-    "father": "SHANKAR KUMAR MAHATO",
-    "mother": "ANITA DEVI",
-    "test_name": "Class 11 14th Test (STATISTICS AND PROBABILITY)",
+    "roll_no": 123,
+    "roll_code": 5438,
+    "name": "PRADUM RAJWAR",
+    "father": "JAGDISH RAJWAR",
+    "mother": "SHANTI DEVI",
+    "test_name": "Class 12 17th Test Differential Calculus",
     "total_marks": 40,
-    "marks_obtained": 24,
-    "percentage": "60%",
+    "marks_obtained": 23,
+    "percentage": "58%",
     "rank": 8,
     "remarks": "try harder",
     "date": "14-12-2025",
     "place": "Bokaro"
+  },
+  {
+    "roll_no": 104,
+    "roll_code": 9711,
+    "name": "KARAN KUMAR GORAIN",
+    "father": "RAJU GORAIN",
+    "mother": "TULA DEVI",
+    "test_name": "Class 12 17th Test Differential Calculus",
+    "total_marks": 40,
+    "marks_obtained": 15,
+    "percentage": "38%",
+    "rank": 15,
+    "remarks": "try harder",
+    "date": "14-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 114,
+    "roll_code": 4903,
+    "name": "AMIT CHOUDHARY",
+    "father": "",
+    "mother": "",
+    "test_name": "Class 12 17th Test Differential Calculus",
+    "total_marks": 40,
+    "marks_obtained": 25,
+    "percentage": "63%",
+    "rank": 5,
+    "remarks": "try harder",
+    "date": "14-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 124,
+    "roll_code": 4259,
+    "name": "DURGA CHARAN GORAIN",
+    "father": "KISHAN KUMAR GORAIN",
+    "mother": "KIRAN DEVI",
+    "test_name": "Class 12 17th Test Differential Calculus",
+    "total_marks": 40,
+    "marks_obtained": 12,
+    "percentage": "30%",
+    "rank": 17,
+    "remarks": "try harder",
+    "date": "14-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 115,
+    "roll_code": 5900,
+    "name": "SWITI MAHATHA",
+    "father": "SAMAR NATH MAHATHA",
+    "mother": "JABA DEVI",
+    "test_name": "Class 12 17th Test Differential Calculus",
+    "total_marks": 40,
+    "marks_obtained": 29,
+    "percentage": "73%",
+    "rank": 3,
+    "remarks": "try harder",
+    "date": "14-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 116,
+    "roll_code": 1472,
+    "name": "VISHAL KUMAR",
+    "father": "",
+    "mother": "",
+    "test_name": "Class 12 17th Test Differential Calculus",
+    "total_marks": 40,
+    "marks_obtained": 9,
+    "percentage": "23%",
+    "rank": 18,
+    "remarks": "try harder",
+    "date": "14-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 133,
+    "roll_code": 1683,
+    "name": "PRAMOD KUMAR",
+    "father": "DEVILAL MAHATO",
+    "mother": "SULOCHANA DEVI",
+    "test_name": "Class 12 17th Test Differential Calculus",
+    "total_marks": 40,
+    "marks_obtained": 14,
+    "percentage": "35%",
+    "rank": 16,
+    "remarks": "try harder",
+    "date": "14-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 107,
+    "roll_code": 7083,
+    "name": "JAGJEET MAHATHA",
+    "father": "JAIDEO MAHATHA",
+    "mother": "NAMITA DEVI",
+    "test_name": "Class 12 17th Test Differential Calculus",
+    "total_marks": 40,
+    "marks_obtained": 25,
+    "percentage": "63%",
+    "rank": 5,
+    "remarks": "try harder",
+    "date": "14-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 119,
+    "roll_code": 9686,
+    "name": "ROHIT GORAIN",
+    "father": "VISHWANATH GORAI",
+    "mother": "SUNEETA DEVI",
+    "test_name": "Class 12 17th Test Differential Calculus",
+    "total_marks": 40,
+    "marks_obtained": 2,
+    "percentage": "5%",
+    "rank": 22,
+    "remarks": "try harder",
+    "date": "14-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 120,
+    "roll_code": 2596,
+    "name": "VIJAY KANT GOPE",
+    "father": "KAMAL GOPE",
+    "mother": "PAWNI DEVI",
+    "test_name": "Class 12 17th Test Differential Calculus",
+    "total_marks": 40,
+    "marks_obtained": 2,
+    "percentage": "5%",
+    "rank": 22,
+    "remarks": "try harder",
+    "date": "14-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 108,
+    "roll_code": 5741,
+    "name": "SHIV KUMAR",
+    "father": "SANJAY KUMAR BARNWAL",
+    "mother": "SANGITA DEVI",
+    "test_name": "Class 12 17th Test Differential Calculus",
+    "total_marks": 40,
+    "marks_obtained": 16,
+    "percentage": "40%",
+    "rank": 12,
+    "remarks": "try harder",
+    "date": "14-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 121,
+    "roll_code": 7927,
+    "name": "ABHISHEK KUMAR",
+    "father": "KIREN GOPE",
+    "mother": "GEETA DEVI",
+    "test_name": "Class 12 17th Test Differential Calculus",
+    "total_marks": 40,
+    "marks_obtained": 19,
+    "percentage": "48%",
+    "rank": 10,
+    "remarks": "try harder",
+    "date": "14-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 129,
+    "roll_code": 541,
+    "name": "VISHAL KUMAR",
+    "father": "DIKSHIT KUMAR MAHATO",
+    "mother": "LAKSHMI DEVI",
+    "test_name": "Class 12 17th Test Differential Calculus",
+    "total_marks": 40,
+    "marks_obtained": 20,
+    "percentage": "50%",
+    "rank": 9,
+    "remarks": "try harder",
+    "date": "14-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 130,
+    "roll_code": 1295,
+    "name": "ANKIT ROY",
+    "father": "ASHISH KUMAR ROY",
+    "mother": "NAMITA DEVI",
+    "test_name": "Class 12 17th Test Differential Calculus",
+    "total_marks": 40,
+    "marks_obtained": 28,
+    "percentage": "70%",
+    "rank": 4,
+    "remarks": "try harder",
+    "date": "14-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 123,
+    "roll_code": 4514,
+    "name": "KAUSHAL KUMAR SHARMA",
+    "father": "BHOLA NATH SHARMA",
+    "mother": "SIMA DEVI",
+    "test_name": "Class 12 17th Test Differential Calculus",
+    "total_marks": 40,
+    "marks_obtained": 4,
+    "percentage": "10%",
+    "rank": 21,
+    "remarks": "try harder",
+    "date": "14-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 110,
+    "roll_code": 3013,
+    "name": "VIVEK KUMAR MAHATO",
+    "father": "PARIKSHIT MAHATO",
+    "mother": "RITA DEVI",
+    "test_name": "Class 12 17th Test Differential Calculus",
+    "total_marks": 40,
+    "marks_obtained": 25,
+    "percentage": "63%",
+    "rank": 5,
+    "remarks": "try harder",
+    "date": "14-12-2025",
+    "place": "Bokaro"
+  },
+  {
+    "roll_no": 136,
+    "roll_code": 90,
+    "name": "BABITA KUMARI",
+    "father": "",
+    "mother": "",
+    "test_name": "Class 12 17th Test Differential Calculus",
+    "total_marks": 40,
+    "marks_obtained": 7,
+    "percentage": "18%",
+    "rank": 20,
+    "remarks": "try harder",
+    "date": "14-12-2025",
+    "place": "Bokaro"
   }
-
-
 
   ];
 
