--- a/test1.html
+++ b/test1.html
@@ -147,186 +147,43 @@
 
   <script>
     const students = [
-  {
-    "roll_no": 10293,
-    "roll_code": 25033,
-    "name": "PREM KUMAR SHARMA",
-    "father": "ANIL KUMAR SHARMA",
-    "mother": "ELACHU DEVI",
-    "test_name": "Class 12 1ST SUPER TEST",
-    "total_marks": 80,
-    "marks_obtained": 70,
-    "percentage": "88%",
-    "rank": 1,
-    "remarks": "good",
-    "date": "04-01-2026",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 10007,
-    "roll_code": 25033,
-    "name": "SADHAN MAHATHA",
-    "father": "MURLI DHAR MAHATHA",
-    "mother": "RITA DEVI",
-    "test_name": "Class 12 1ST SUPER TEST",
-    "total_marks": 80,
-    "marks_obtained": 38,
-    "percentage": "48%",
-    "rank": 13,
-    "remarks": "try harder",
-    "date": "04-01-2026",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 10155,
-    "roll_code": 25033,
-    "name": "AKASH MAHATHA",
-    "father": "ARJUN MAHATHA",
-    "mother": "UJALA DEVI",
-    "test_name": "Class 12 1ST SUPER TEST",
-    "total_marks": 80,
-    "marks_obtained": 51,
-    "percentage": "64%",
-    "rank": 8,
-    "remarks": "try harder",
-    "date": "04-01-2026",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 10203,
-    "roll_code": 25033,
-    "name": "MADHUSUDAN CHOUDHARY",
-    "father": "MOHAN LAL CHOUDHARY",
-    "mother": "SAMPURA DEVI",
-    "test_name": "Class 12 1ST SUPER TEST",
-    "total_marks": 80,
-    "marks_obtained": 32,
-    "percentage": "40%",
-    "rank": 19,
-    "remarks": "try harder",
-    "date": "04-01-2026",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 10048,
-    "roll_code": 25033,
-    "name": "DHIRAJ KUMAR MAHATHA",
-    "father": "BISHNU MAHATHA",
-    "mother": "GAYATRI DEVI",
-    "test_name": "Class 12 1ST SUPER TEST",
-    "total_marks": 80,
-    "marks_obtained": 64,
-    "percentage": "80%",
-    "rank": 2,
-    "remarks": "good",
-    "date": "04-01-2026",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 10484,
-    "roll_code": 25033,
-    "name": "KARAN KUMAR GORAIN",
-    "father": "RAJU GORAIN",
-    "mother": "TULA DEVI",
-    "test_name": "Class 12 1ST SUPER TEST",
-    "total_marks": 80,
-    "marks_obtained": 59,
-    "percentage": "74%",
-    "rank": 3,
-    "remarks": "try harder",
-    "date": "04-01-2026",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 10476,
-    "roll_code": 25033,
-    "name": "AMIT CHOUDHARY",
-    "father": "RATU LAL CHOUDHARY",
-    "mother": "BABITA DEVI",
-    "test_name": "Class 12 1ST SUPER TEST",
-    "total_marks": 80,
-    "marks_obtained": 37,
-    "percentage": "46%",
-    "rank": 15,
-    "remarks": "try harder",
-    "date": "04-01-2026",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 10480,
-    "roll_code": 25033,
-    "name": "DURGA CHARAN GORAIN",
-    "father": "KISHAN KUMAR GORAIN",
-    "mother": "KIRAN DEVI",
-    "test_name": "Class 12 1ST SUPER TEST",
-    "total_marks": 80,
-    "marks_obtained": 48,
-    "percentage": "60%",
-    "rank": 9,
-    "remarks": "try harder",
-    "date": "04-01-2026",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 10359,
-    "roll_code": 25033,
-    "name": "PUJA KUMARI",
-    "father": "KISHAN MAHATO",
-    "mother": "ANITA DEVI",
-    "test_name": "Class 12 1ST SUPER TEST",
-    "total_marks": 80,
-    "marks_obtained": 24,
-    "percentage": "30%",
-    "rank": 25,
-    "remarks": "try harder",
-    "date": "04-01-2026",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 125,
-    "roll_code": 25033,
-    "name": "SRIRAM SHARMA",
-    "father": "PANCHANAN SHARMA",
-    "mother": "SANTOSHI DEVI",
-    "test_name": "Class 12 1ST SUPER TEST",
-    "total_marks": 80,
-    "marks_obtained": 0,
-    "percentage": "0%",
-    "rank": 31,
-    "remarks": "try harder",
-    "date": "04-01-2026",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 10033,
-    "roll_code": 25037,
-    "name": "ANKIT ROY",
-    "father": "ASHISH KUMAR ROY",
-    "mother": "NAMITA DEVI",
-    "test_name": "Class 12 1ST SUPER TEST",
-    "total_marks": 80,
-    "marks_obtained": 55,
-    "percentage": "69%",
-    "rank": 6,
-    "remarks": "try harder",
-    "date": "04-01-2026",
-    "place": "Bokaro"
-  },
-  {
-    "roll_no": 10140,
-    "roll_code": 25033,
-    "name": "VIVEK KUMAR MAHATO",
-    "father": "PARIKSHIT MAHATO",
-    "mother": "RITA DEVI",
-    "test_name": "Class 12 1ST SUPER TEST",
-    "total_marks": 80,
-    "marks_obtained": 57,
-    "percentage": "71%",
-    "rank": 4,
-    "remarks": "try harder",
-    "date": "04-01-2026",
-    "place": "Bokaro"
-  }
+  {"roll_no":10293,"roll_code":25033,"name":"PREM KUMAR SHARMA","father":"ANIL KUMAR SHARMA","mother":"ELACHU DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":70,"percentage":"88%","rank":1,"remarks":"good","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10007,"roll_code":25033,"name":"SADHAN MAHATHA","father":"MURLI DHAR MAHATHA","mother":"RITA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":38,"percentage":"48%","rank":13,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10155,"roll_code":25033,"name":"AKASH MAHATHA","father":"ARJUN MAHATHA","mother":"UJALA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":51,"percentage":"64%","rank":8,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10203,"roll_code":25033,"name":"MADHUSUDAN CHOUDHARY","father":"MOHAN LAL CHOUDHARY","mother":"SAMPURA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":32,"percentage":"40%","rank":19,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10048,"roll_code":25033,"name":"DHIRAJ KUMAR MAHATHA","father":"BISHNU MAHATHA","mother":"GAYATRI DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":64,"percentage":"80%","rank":2,"remarks":"good","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10375,"roll_code":25037,"name":"PRADUM RAJWAR","father":"JAGDISH RAJWAR","mother":"SHANTI DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":47,"percentage":"59%","rank":10,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10484,"roll_code":25033,"name":"KARAN KUMAR GORAIN","father":"RAJU GORAIN","mother":"TULA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":59,"percentage":"74%","rank":3,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10476,"roll_code":25033,"name":"AMIT CHOUDHARY","father":"RATU LAL CHOUDHARY","mother":"BABITA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":37,"percentage":"46%","rank":15,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10480,"roll_code":25033,"name":"DURGA CHARAN GORAIN","father":"KISHAN KUMAR GORAIN","mother":"KIRAN DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":48,"percentage":"60%","rank":9,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10458,"roll_code":25033,"name":"SWITI MAHATHA","father":"SAMAR NATH MAHATHA","mother":"JABA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":47,"percentage":"59%","rank":10,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10359,"roll_code":25033,"name":"PUJA KUMARI","father":"KISHAN MAHATO","mother":"ANITA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":24,"percentage":"30%","rank":25,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":116,"roll_code":25033,"name":"VISHAL KUMAR","father":"","mother":"","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":25,"percentage":"31%","rank":24,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":125,"roll_code":25033,"name":"SRIRAM SHARMA","father":"PANCHANAN SHARMA","mother":"SANTOSHI DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":0,"percentage":"0%","rank":31,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10479,"roll_code":25033,"name":"BITTU KUMAR","father":"DUKHU GORAIN","mother":"PANTI DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":20,"percentage":"25%","rank":29,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10174,"roll_code":25033,"name":"PANKAJ KUMAR","father":"SHIV NANDAN SINGH","mother":"CHHAYA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":23,"percentage":"29%","rank":27,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10301,"roll_code":25033,"name":"CHANDAN SAHU","father":"BHOLA SAHU","mother":"KAVITA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":15,"percentage":"19%","rank":30,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10438,"roll_code":25033,"name":"LAXMAN KUMAR","father":"SAHADEV RAY","mother":"SAVITRI DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":37,"percentage":"46%","rank":15,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10295,"roll_code":25037,"name":"PRAMOD KUMAR","father":"DEVILAL MAHATO","mother":"SULOCHANA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":42,"percentage":"53%","rank":12,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10361,"roll_code":25033,"name":"AMAR GOPE","father":"DARA PAD GOPE","mother":"REKHA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":32,"percentage":"40%","rank":19,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10129,"roll_code":25033,"name":"JAGJEET MAHATHA","father":"JAIDEO MAHATHA","mother":"NAMITA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":57,"percentage":"71%","rank":4,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10298,"roll_code":25033,"name":"ROHIT GORAIN","father":"VISHWANATH GORAI","mother":"SUNEETA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":28,"percentage":"35%","rank":22,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10375,"roll_code":25033,"name":"PREM KUMAR MAHATO","father":"SKAKTIPAD MAHATO","mother":"SURATHI DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":35,"percentage":"44%","rank":18,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10299,"roll_code":25033,"name":"VIJAY KANT GOPE","father":"KAMAL GOPE","mother":"PAWNI DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":31,"percentage":"39%","rank":21,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":22640227,"roll_code":0,"name":"SHIV KUMAR","father":"SANJAY KUMAR BARNWAL","mother":"SANGITA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":38,"percentage":"48%","rank":13,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10096,"roll_code":25030,"name":"ABHISHEK KUMAR","father":"KIREN GOPE","mother":"GEETA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":36,"percentage":"45%","rank":17,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10245,"roll_code":25033,"name":"VISHAL KUMAR","father":"DIKSHIT KUMAR MAHATO","mother":"LAKSHMI DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":52,"percentage":"65%","rank":7,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":122,"roll_code":25033,"name":"ANUJ KUMAR","father":"TAPAN PATHAK","mother":"RITA PATHAK","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":0,"percentage":"0%","rank":31,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":109,"roll_code":25033,"name":"KUNAL PATHAK","father":"PRADEEP KUMAR PATHAK","mother":"PUNITA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":0,"percentage":"0%","rank":31,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10033,"roll_code":25037,"name":"ANKIT ROY","father":"ASHISH KUMAR ROY","mother":"NAMITA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":55,"percentage":"69%","rank":6,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":22640228,"roll_code":0,"name":"KAUSHAL KUMAR SHARMA","father":"BHOLA NATH SHARMA","mother":"SIMA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":0,"percentage":"0%","rank":31,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":132,"roll_code":25033,"name":"NISHAN KUMAR MAHATO","father":"","mother":"","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":0,"percentage":"0%","rank":31,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10140,"roll_code":25033,"name":"VIVEK KUMAR MAHATO","father":"PARIKSHIT MAHATO","mother":"RITA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":57,"percentage":"71%","rank":4,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10053,"roll_code":25063,"name":"USHA KUMARI","father":"GANGADHAR GORAIN","mother":"GEETA BALA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":0,"percentage":"0%","rank":31,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":22640229,"roll_code":0,"name":"BABITA KUMARI","father":"CHHOTU PAL","mother":"MIRA DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":26,"percentage":"33%","rank":23,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10080,"roll_code":25033,"name":"RAKESH KUMAR SHARMA","father":"TRIBENI KUMAR SHARMA","mother":"MILU DEVI","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":24,"percentage":"30%","rank":25,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"},
+  {"roll_no":10372,"roll_code":25033,"name":"KRISHNA JHA","father":"","mother":"","test_name":"Class 12 1ST SUPER TEST","total_marks":80,"marks_obtained":22,"percentage":"28%","rank":28,"remarks":"try harder","date":"04-01-2026","place":"Bokaro"}
+
 ];
 
     function searchResult() {
